<resources>
    <string name="app_name">ATM App</string>
    <string name="str_atm">ATMPRO</string>
    <string name="str_virtul">YOUR VIRTUAL ATM NETWORK</string>
    <string name="str_terms">Terms and Conditions</string>
    <string name="str_proceed">When you proceed, you are agreeing to our\n           Terms and Conditions </string>
    <string name="str_proce">Proceed</string>
    <string name="str_cust">Customer</string>
    <string name="str_agent">ATM</string>
    <string name="str_logintxt">Login or Create New Account</string>
    <string name="str_login">Login</string>
    <string name="str_loginorsign">LOGIN OR SIGN UP</string>
    <string name="str_pwd">Password</string>
    <string name="str_forgotpwd">Forgot Password?</string>
    <string name="str_click">Click here</string>
    <string name="str_cretaccnt">Create New Account</string>
    <string name="str_name">Name</string>
    <string name="str_hintname">Full name</string>
    <string name="str_add">Address</string>
    <string name="str_hintadd">House no, Flat,Street</string>
    <string name="str_mobileNo">Mobile Number</string>
    <string name="str_debit">Debit Card</string>
    <string name="str_exp">Expiration</string>
    <string name="str_register">Register</string>
    <string name="str_alredy">ALREADY HAVE AN ACCOUNT? LOGIN HERE</string>
    <string name="str_bankname">Bank Name</string>
    <string name="str_bankacc">Bank Account Number</string>
    <string name="str_ssn">Social Security Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Forgot Password-->
    <string name="str_enteremail">Enter Your Email ID</string>
    <string name="str_submit">Submit</string>
    <string name="str_cancle">Cancel</string>
    <string name="str_forgot">Forgot Password ?</string>



    <!--Forgot Password-->
    <string name="str_home">Home</string>
    <string name="str_profile">My Profile</string>
    <string name="str_trashistory">Transaction History</string>
    <string name="str_notification">Notification</string>
    <string name="str_logout">Logout</string>
    <!--Errors-->
    <string name="time_our_error">Time out.</string>
    <string name="can_not_connect">No Internet Connection Available.</string>
    <string name="auth_fail">Authentication Failed.</string>
    <string name="server_error">Server error.</string>
    <string name="netwotk_error">Unable to connect with network.</string>
    <string name="parser_error">Parse error.</string>
    <string name="unknow_error_txt">Unknown Error.</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_activity__view__profile">Activity_View_Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_view_message">View Message</string>
    <string name="processing">Processing...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_folder_all">All Images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="title_activity_maps">Map</string>
</resources>
