<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"

            android:title="@string/str_home" />

    </group>
    <group
        android:id="@+id/myprofile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/profile"

            android:title="@string/str_profile" />

    </group>
    <group
        android:id="@+id/bankaccount"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bankaccount"
            android:icon="@drawable/profile"

            android:title="Bank Account" />

    </group>
    <group
        android:id="@+id/trashistory"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trashistory"
            android:icon="@drawable/history"

            android:title="@string/str_trashistory" />

    </group>


    <group
        android:id="@+id/notification"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"

            android:title="@string/str_notification" />

    </group>


    <group
        android:id="@+id/logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout" />

    </group>


</menu>
