<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tv_acc"
    android:layout_marginLeft="@dimen/text_20"
    android:layout_marginRight="@dimen/dimens_20dp"
    android:layout_marginTop="@dimen/dimens_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10dp"
            android:gravity="center"
            android:text="@string/str_forgot"
            android:textColor="@color/coloBlack"
            android:textSize="@dimen/text_size_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"></View>


        <EditText
            android:id="@+id/et_emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dimens_10dp"
            android:layout_marginRight="@dimen/dimens_10dp"
            android:hint="@string/str_enteremail"
            android:inputType="textEmailAddress"
            android:textColor="@color/coloBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
           android:layout_margin="@dimen/dimens_20dp" android:background="@drawable/login_button_bg">

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:layout_toLeftOf="@+id/view"
                android:text="@string/str_submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_18dp" />

            <View
                android:id="@+id/view"
                android:layout_width="1.5dp"
                android:layout_height="@dimen/dimens_50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorWhite"></View>

            <TextView
                android:id="@+id/tv_cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_40dp"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:layout_toRightOf="@+id/view"
                android:text="@string/str_cancle"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_18dp" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>